# benchmark-example

./: CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
libs/: CMakeLists.txt  highway.cpp  highway_dynamic.cpp  highway_static.cpp  iterate.cpp  lib.cpp  mandel.cpp  span.cpp
libs/include/lib/: ComplexT.h  lib.h
libs/include/mandel/: ComplexT.h  iterate.h  mandel.h  span.h
tests/: CMakeLists.txt  ComplexT_test.cpp
tools/: CMakeLists.txt  iterate.cpp  main.cpp  span.cpp
